fix layout issues

--- a/web/src/views/projects/List.module.scss
+++ b/web/src/views/projects/List.module.scss
@@ -22,6 +22,7 @@
   width: 25%;
   cursor: pointer;
   font-size: 1rem;
+  padding: 0.5rem;
 
   .name {
     font-weight: bold;
